--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,19 @@ dependencies:
   intl: ^0.16.1
   animator: ^1.0.0+4
   modal_progress_hud: ^0.1.3
+  cached_network_image: ^2.0.0
+  flutter_custom_clippers: ^1.1.0
+  font_awesome_flutter: ^8.5.0
+  fluttertoast: ^3.1.3
+  toast: ^0.1.5
+  simple_animations: ^1.3.3
+
+  firebase_core: ^0.4.3+3
+  firebase_analytics: ^5.0.11
+  firebase_auth: ^0.15.4
+  cloud_firestore: ^0.13.0+1
+  firebase_storage: ^3.1.1
+  image_picker: ^0.6.3+1
 
 dev_dependencies:
   flutter_test:
