--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   firebase_storage: ^3.1.1
   image_picker: ^0.6.3+1
 
+  flutter_launcher_icons: ^0.6.1
+  shared_preferences: ^0.4.3
+  json_annotation: ^2.0.0
+  cupertino_icons: ^0.1.2
+  http: ^0.12.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
