--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.0+1
   firebase_storage: ^3.1.1
+  firebase_database: ^3.1.3
   image_picker: ^0.6.3+1
 
   flutter_launcher_icons: ^0.6.1
