--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0
 
+  rflutter_alert: ^1.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
